--- a/packages/generator/jest.config.json
+++ b/packages/generator/jest.config.json
@@ -1,7 +1,7 @@
 {
   "testEnvironment": "node",
   "transform": {
-    "^.+\\.tsx?$": "ts-jest",
+    "^.+\\.tsx?$": ["ts-jest", { "tsconfig": "<rootDir>/tsconfig.test.json" }],
     "^.+\\.jsx?$": "@swissquote/crafty-preset-jest/src/esm-transformer"
   },
   "collectCoverage": true,
@@ -26,11 +26,5 @@
     "json",
     "node"
   ],
-  "preset": "ts-jest",
-  "globals": {
-    "ts-jest": {
-      "tsconfig": "<rootDir>/tsconfig.test.json"
-    }
-  }
-
+  "preset": "ts-jest"
 }
