--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -19,31 +19,33 @@
     "infra:terser": "cd $INIT_CWD && terser",
     "infra:mkdirp": "cd $INIT_CWD && mkdirp",
     "infra:tsc": "cd $INIT_CWD && tsc",
-    "infra:uglify": "./scripts/sh/uglify.sh"
+    "infra:uglify": "./scripts/sh/uglify.sh",
+    "infra:tsc-esm-fix": "cd $INIT_CWD && tsc-esm-fix"
   },
   "devDependencies": {
     "@qiwi/libdefkit": "^4.0.8",
     "@qiwi/npm-run-all": "^4.1.7",
     "@swissquote/crafty-preset-jest": "^1.20.0",
-    "@types/jest": "^29.2.1",
+    "@types/jest": "^29.2.3",
     "@types/mkdirp": "^1",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
     "buildstamp": "^2.1.0",
     "c8": "^7.12.0",
     "cpy-cli": "^4.2.0",
     "depcheck": "^1.4.3",
-    "eslint": "^8.26.0",
+    "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-qiwi": "^1.17.8",
-    "jest": "^29.2.2",
+    "jest": "^29.3.1",
     "mkdirp": "^1.0.4",
     "prettier": "^2.7.1",
     "prettier-config-qiwi": "^1.7.3",
     "rimraf": "^3.0.2",
     "terser": "^5.15.1",
     "ts-jest": "^29.0.3",
-    "typedoc": "^0.23.20",
-    "typescript": "^4.8.4",
+    "tsc-esm-fix": "^2.20.6",
+    "typedoc": "^0.23.21",
+    "typescript": "^4.9.3",
     "typescript-eslint-parser": "^22.0.0"
   },
   "repository": {
