--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -6,8 +6,8 @@
   },
   "description": "Native client for gerrit",
   "keywords": [],
-  "main": "target/es5/index.js",
-  "source": "target/ts/index.ts",
+  "main": "./target/es5/index.js",
+  "exports": "./target/es6/index.js",
   "types": "target/es5/index.d.ts",
   "typescript": {
     "definition": "target/es5/index.d.ts"
@@ -29,11 +29,12 @@
     "clean": "yarn infra:rimraf target typings flow-typed buildcache coverage docs buildstamp.json",
     "test:depcheck": "yarn infra:depcheck --ignores='typedoc,tslib,earljs,eslint-*,prettier-*,**/*-infra' --ignore-patterns='typings'",
     "prebuild": "yarn infra:buildstamp --git --out.path buildstamp.json",
-    "build": "yarn infra:npm-run-all -p -l build:es5 build:es6 build:ts build:libdef docs uglify",
+    "build": "yarn infra:npm-run-all -p -l build:es5 build:es6 build:ts build:esmfix build:libdef docs uglify",
     "build:es5": "yarn infra:mkdirp target/es5 && yarn infra:tsc -p tsconfig.es5.json",
     "build:es6": "yarn infra:mkdirp target/es6 && yarn infra:tsc -p tsconfig.es6.json",
     "build:ts": "cpy src/main/ts/ target/ts/",
     "build:libdef": "yarn infra:libdefkit --tsconfig=tsconfig.es5.json --tsconfig=tsconfig.es6.json",
+    "build:esmfix": "yarn infra:tsc-esm-fix --target=target/es6",
     "docs": "run -T typedoc",
     "uglify": "yarn infra:uglify",
     "postupdate": "yarn && yarn build && yarn test"
